新增通知回执确认与重投机制
1. 新增通知回执确认入口、确认命令和 WebSocket 回执接口，调整消息通知模型与通知器调用链

2. 实现回执任务延迟重投存储、确认删除、最大重投次数和事务提交后执行模板

3. 补充通知回执、重投队列、事务提交、值对象断言和接口转换测试